--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,8 @@
         const messageDiv = document.getElementById('message');
 
         button.addEventListener('click', () => {
-            fetch('http://localhost:8080/api/message')
+           // fetch('http://localhost:8080/api/message')
+                fetch('https://project-1-6-jy84.onrender.com/api/message')
                 .then(response => response.text())
                 .then(data => {
                     messageDiv.innerText = data;
