--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
 
         button.addEventListener('click', () => {
            // fetch('http://localhost:8080/api/message')
-                fetch('https://project-1-6-jy84.onrender.com/api/message')
+                fetch('/api/message')
                 .then(response => response.text())
                 .then(data => {
                     messageDiv.innerText = data;
